feat：给授权确认信息添加失效时间，将回调页面的相关地址更换为容器地址

--- a/authorization-server/src/main/resources/static/callback/oauth-redirect.html
+++ b/authorization-server/src/main/resources/static/callback/oauth-redirect.html
@@ -36,18 +36,18 @@
     </style>
     <script>
         // token endpoint
-        const TOKEN_ENDPOINT = 'http://127.0.0.1:8080/oauth2/token';
-        // const TOKEN_ENDPOINT = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/oauth2/token';
+        // const TOKEN_ENDPOINT = 'http://127.0.0.1:8080/oauth2/token';
+        const TOKEN_ENDPOINT = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/oauth2/token';
         // authorization endpoint
-        const AUTHORIZATION_ENDPOINT = 'http://127.0.0.1:8080/oauth2/authorize';
-        // const AUTHORIZATION_ENDPOINT = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/oauth2/authorize';
+        // const AUTHORIZATION_ENDPOINT = 'http://127.0.0.1:8080/oauth2/authorize';
+        const AUTHORIZATION_ENDPOINT = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/oauth2/authorize';
         // client ID
         const CLIENT_ID = 'messaging-client';
         // client ID
         const CLIENT_SECRET = '123456';
         // redirect URI
-        const REDIRECT_URI = 'http://127.0.0.1:8080/callback/oauth-redirect.html';
-        // const REDIRECT_URI = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/callback/oauth-redirect.html';
+        // const REDIRECT_URI = 'http://127.0.0.1:8080/callback/oauth-redirect.html';
+        const REDIRECT_URI = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/callback/oauth-redirect.html';
         // SCOPES
         const SCOPES = 'message.read message.write openid profile';
 
