--- a/authorization-server/src/main/resources/static/callback/pkce-redirect.html
+++ b/authorization-server/src/main/resources/static/callback/pkce-redirect.html
@@ -44,16 +44,16 @@
 </div>
 <script>
   // token endpoint
-  const TOKEN_ENDPOINT = 'http://127.0.0.1:8080/oauth2/token';
-  // const TOKEN_ENDPOINT = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/oauth2/token';
+  // const TOKEN_ENDPOINT = 'http://127.0.0.1:8080/oauth2/token';
+  const TOKEN_ENDPOINT = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/oauth2/token';
   // authorization endpoint
-  const AUTHORIZATION_ENDPOINT = 'http://127.0.0.1:8080/oauth2/authorize';
-  // const AUTHORIZATION_ENDPOINT = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/oauth2/authorize';
+  // const AUTHORIZATION_ENDPOINT = 'http://127.0.0.1:8080/oauth2/authorize';
+  const AUTHORIZATION_ENDPOINT = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/oauth2/authorize';
   // client ID
   const CLIENT_ID = 'pkce-message-client';
   // redirect URI
-  const REDIRECT_URI = 'http://127.0.0.1:8080/callback/pkce-redirect.html';
-  // const REDIRECT_URI = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/callback/pkce-redirect.html';
+  // const REDIRECT_URI = 'http://127.0.0.1:8080/callback/pkce-redirect.html';
+  const REDIRECT_URI = 'https://calm-lory-vains-0ca1b4e1.koyeb.app/callback/pkce-redirect.html';
   // SCOPES
   const SCOPES = 'message.read message.write';
 
